Update3 index.html

--- a/index.html
+++ b/index.html
@@ -256,9 +256,9 @@
                 history: ""
             },
             {
-                id: 'energeticoMormaii', // Novo produto adicionado
+                id: 'energeticoMormaii', // Produto existente, preço será atualizado
                 name: 'Energetico Mormaii 1L',
-                price: 12.00, // Preço exemplo, pode ser ajustado
+                price: 10.00, // Preço atualizado para 10.00
                 description: "Energético Mormaii para dar um up no seu dia com muito sabor e energia. Ideal para atividades físicas ou para quando você precisa de um estímulo extra.",
                 shortDescription: "Energia e sabor para o seu dia a dia.",
                 image: "https://ibassets.com.br/ib.item.image.large/l-99ab0795ec7548cf8ae213de21d9fb04.jpeg",
