Update5 index.html

--- a/index.html
+++ b/index.html
@@ -237,6 +237,15 @@
                 image: "https://cdn11.bigcommerce.com/s-q90i85/images/stencil/1280w/products/390/1139/blackandwhite__39875.1629546098.png?c=2",
                 history: "O Whisky Black & White foi criado em 1884 por James Buchanan. Originalmente conhecido como 'Buchanan's Blend', o nome 'Black & White' foi adotado devido à popularidade do seu rótulo distintivo, com um cão Terrier escocês preto e um West Highland White Terrier branco. Tornou-se um dos whiskies mais vendidos no mundo, especialmente conhecido pela sua leveza e suavidade, o que o torna ideal para ser apreciado puro ou em cocktails."
             },
+             {
+                id: 'ballantines1l',
+                name: "Ballantine's Whisky 1L",
+                price: 120.00,
+                description: "Ballantine's 12 anos é um whisky blended de alta qualidade, envelhecido por 12 anos. Possui um sabor suave e complexo com notas de mel, baunilha e um toque de carvalho.",
+                shortDescription: "Whisky 12 anos, suave e complexo.",
+                image: "https://http2.mlstatic.com/D_NQ_NP_903203-MLU75183546582_032024-O.webp",
+                history: "Ballantine's é uma das marcas de whisky mais prestigiadas do mundo, com uma história que remonta a 1827. A versão de 12 anos é um exemplo da maestria da marca na arte da mistura."
+            },
             {
                 id: 'slovaMix',
                 name: 'Slova Mix 300ml',
@@ -751,4 +760,4 @@
         });
     </script>
 </body>
-</html>
+</ht
